--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 /* GLOBAL VARIABLES */
 :root {
@@ -12,7 +12,7 @@
   --colorOctary: #dfcfb4;
   --colorNonary: #f2ece3;
 
-  --headerHeight: 6rem;
+  --headerHeight: 8rem;
   --dividerHeight: 0.2rem;
 }
 
@@ -25,15 +25,16 @@ body {
 }
 
 .title {
-  font-family: "Archivo Black", sans-serif;
-  font-weight: 400;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
   font-style: normal;
+  color: var(--colorPrimary);
 }
 
 .dividerPrimary {
   background: linear-gradient(
     90deg,
-    var(--colorSecondary),
+    var(--colorSecondary) 40%,
     var(--colorQuaternary)
   );
 
