--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ body {
   font-family: "Poppins", sans-serif;
   font-weight: 500;
   font-style: normal;
-  color: var(--colorPrimary);
+  color: var(--colorSecondary);
 }
 
 .dividerPrimary {
