--- a/src/shared/components/Navbar/style.css
+++ b/src/shared/components/Navbar/style.css
@@ -1,13 +1,14 @@
 #navbar {
-  height: 2.5rem;
-
-  padding-left: 5vw;
+  height: 3.5rem;
+  width: 80vw;
+  
+  margin: auto;
 
   background: linear-gradient(
     90deg,
     var(--colorSecondary),
-    var(--colorQuaternary)
+    var(--colorTertiary)
   );
 
-  border-radius: 5rem 0 0 0;
+  border-radius: var(--borderRounded);
 }
