--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 /* GLOBAL VARIABLES */
 :root {
@@ -28,11 +28,9 @@ body {
   font-style: normal;
 }
 
-.title {
-  font-family: "Poppins", sans-serif;
-  font-weight: 500;
-  font-style: normal;
-  color: var(--colorSecondary);
+.section-highlight-text {
+  font-family: "Merriweather", serif;
+  font-size: 3rem;
 }
 
 .dividerPrimary {
