update: Highlight title text class name

--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ body {
   font-style: normal;
 }
 
-.section-highlight-text {
+.highlight-title-text {
   font-family: "Merriweather", serif;
   font-size: 3rem;
 }
