--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,42 @@ body {
   font-family: "Merriweather", serif;
   font-size: 3rem;
 }
+
+#whatsapp-fixed-icon {
+  position: fixed;
+
+  width: 6rem;
+  height: 6rem;
+
+  right: 2.1rem;
+  bottom: 1.4rem;
+
+  font-size: 3.5rem;
+  font-weight: bold;
+
+  color: white;
+
+  filter: drop-shadow(0 0 7px rgb(104, 104, 104));
+
+  transition: ease-in-out 0.5s;
+
+  &:hover {
+    transform: scale(1.1);
+  }
+}
+
+#whatsapp-fixed-icon:after {
+  content: "1";
+  background-color: #fd3d31;
+
+  border-radius: 50%;
+
+  padding: 0.4rem 0.8rem;
+
+  font-size: 25%;
+
+  position: absolute;
+
+  top: -0.3dvh;
+  right: -0.3dvw;
+}
