--- a/src/pages/Home/components/CompanyMission/style.css
+++ b/src/pages/Home/components/CompanyMission/style.css
@@ -5,3 +5,11 @@
     color: var(--colorSecondary);
   }
 }
+
+@media screen and (max-width: 1024px) {
+  #company-mission > p {
+    margin-bottom: 2rem;
+
+    color: var(--colorSecondary);
+  }
+}
