--- a/src/pages/Home/components/CompanyServiceCard/style.css
+++ b/src/pages/Home/components/CompanyServiceCard/style.css
@@ -16,6 +16,7 @@
   & > p:first-of-type {
     width: 2rem;
     height: 2rem;
+    aspect-ratio: 1 / 1;
 
     display: flex;
     justify-content: center;
