--- a/src/shared/components/Pagination/style.css
+++ b/src/shared/components/Pagination/style.css
@@ -10,6 +10,8 @@
   justify-content: center;
   align-items: center;
 
+  cursor: pointer;
+
   &.active {
     background-color: var(--colorSecondary);
     border-color: var(--colorSecondary);
