--- a/src/pages/ProductCataloguePage/components/Cart/style.css
+++ b/src/pages/ProductCataloguePage/components/Cart/style.css
@@ -1,9 +1,3 @@
-#cart {
-  z-index: 999;
-
-  background-color: var(--colorSeptenary);
-}
-
 @property --gradientStartColor {
   syntax: "<color>";
   initial-value: #1460b2;
@@ -14,6 +8,30 @@
   syntax: "<color>";
   initial-value: #1460b2;
   inherits: false;
+}
+
+#cart {
+  z-index: 999;
+
+  background-color: var(--colorSeptenary);
+
+  filter: drop-shadow(0px 0px 100px rgba(0, 0, 0, 0.2));
+
+  & #closeCartBtn {
+    background: linear-gradient(
+      160deg,
+      var(--gradientStartColor) 40%,
+      var(--gradientEndColor)
+    );
+
+    transition: --gradientStartColor var(--trasitionDuration),
+      --gradientEndColor var(--trasitionDuration);
+
+    &:hover {
+      --gradientStartColor: var(--colorTertiary);
+      --gradientEndColor: var(--colorQuaternary);
+    }
+  }
 }
 
 #requestPricingLink {
